--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services' // Add New
 
 import com.android.build.OutputFile
 
@@ -284,6 +285,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // Add New
+    implementation platform('com.google.firebase:firebase-bom:30.3.1')
 }
 
 if (isNewArchitectureEnabled()) {
