--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.3"
+    "react-native": "0.69.3",
+    "react-native-push-notification": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,5 +26,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "prettier": {
+    "arrowParens": "always"
   }
 }
